[gd_scene load_steps=17 format=3 uid="uid://0b5b81u1itr7"]

[ext_resource type="Script" uid="uid://dq1cwdafxd3cp" path="res://Player/player.gd" id="1_2grdm"]
[ext_resource type="Texture2D" uid="uid://fbmiuyig18x6" path="res://Textures/UI/CursorSelect.png" id="3_fhl08"]
[ext_resource type="Script" uid="uid://crq36hgtm6nkt" path="res://Player/Actions/PickupHandler.gd" id="4_gwnis"]
[ext_resource type="AudioStream" uid="uid://b0ltatuxb2lul" path="res://Sounds/sfx_jump2.wav" id="4_x3vf3"]
[ext_resource type="AudioStream" uid="uid://comsm8vajad2b" path="res://Sounds/sfx_footstep2.wav" id="5_apopc"]
[ext_resource type="Texture2D" uid="uid://ds70q3yx8puki" path="res://Textures/UI/Cursor.png" id="5_k53q1"]
[ext_resource type="Shader" uid="uid://dgjmjbhcx1oul" path="res://Player/player.gdshader" id="6_vtle1"]
[ext_resource type="Shader" uid="uid://cy1n5ok8t6w4f" path="res://Player/VHS.gdshader" id="8_00tjw"]
[ext_resource type="PackedScene" uid="uid://cdo0t3pr762wx" path="res://Util/DebugHUD.tscn" id="9_x3vf3"]
[ext_resource type="PackedScene" uid="uid://bdu3lfl8ecjn7" path="res://Scenes/textbox_ui.tscn" id="10_apopc"]
[ext_resource type="PackedScene" uid="uid://buw0rbqga322g" path="res://Scenes/Bebe.tscn" id="11_apopc"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h4r72"]
radius = 0.436259
height = 1.2677

[sub_resource type="QuadMesh" id="QuadMesh_od3ui"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00tjw"]
render_priority = 0
shader = ExtResource("6_vtle1")
shader_parameter/enable_fog = false
shader_parameter/fog_color = Color(0.545516, 0.668754, 0.725607, 1)
shader_parameter/noise_color = Color(0, 0, 0, 1)
shader_parameter/fog_distance = 450.329
shader_parameter/fog_fade_range = 2.0
shader_parameter/enable_noise = false
shader_parameter/noise_time_fac = 5.642
shader_parameter/enable_color_limitation = true
shader_parameter/color_levels = 32
shader_parameter/enable_dithering = false
shader_parameter/dither_strength = 0.3

[sub_resource type="CapsuleMesh" id="CapsuleMesh_btcbx"]
radius = 0.556
height = 1.51

[sub_resource type="ShaderMaterial" id="ShaderMaterial_apopc"]
shader = ExtResource("8_00tjw")
shader_parameter/shake = 0.0
shader_parameter/noiseQuality = 0.1
shader_parameter/noiseIntensity = 0.0
shader_parameter/offsetIntensity = 0.0
shader_parameter/colorOffsetIntensity = 0.1
shader_parameter/pixelSize = 1.68
shader_parameter/grainIntensity = 0.0
shader_parameter/use_overlay = false
shader_parameter/use_lens_distortion = false
shader_parameter/overlay_color = Color(1, 1, 1, 10)
shader_parameter/lens_distortion_strength = 0.0

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66933, 0)
script = ExtResource("1_2grdm")
default_reticle = ExtResource("5_k53q1")
hover_reticle = ExtResource("3_fhl08")
original_move_speed = 3
sprint_multiplier = 1.6
sfx_jump = ExtResource("4_x3vf3")
sfx_footstep = ExtResource("5_apopc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.118615, 0)
shape = SubResource("CapsuleShape3D_h4r72")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0820816, 0)

[node name="CameraPivot" type="Node3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.243301, 0)

[node name="CameraRig" type="Node3D" parent="Pivot/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.170667, -0.291046)

[node name="GameCamera" type="Camera3D" parent="Pivot/CameraPivot/CameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.145604)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Pivot/CameraPivot/CameraRig/GameCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.245686, -27.192)
transparency = 1.0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_od3ui")
skeleton = NodePath("../../../../..")
surface_material_override/0 = SubResource("ShaderMaterial_00tjw")

[node name="RayCast3D" type="RayCast3D" parent="Pivot/CameraPivot/CameraRig/GameCamera"]
target_position = Vector3(0, 0, -2.97)

[node name="HoldPoint" type="Marker3D" parent="Pivot/CameraPivot/CameraRig"]
transform = Transform3D(0.753443, -0.385941, -0.532327, 0.459916, 0.887933, 0.00719721, 0.469894, -0.250248, 0.846508, 0.4928, -0.514105, -0.405394)

[node name="LookAtPoint" type="Marker3D" parent="Pivot/CameraPivot/CameraRig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.43659)

[node name="PlayerSFX" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
bus = &"SFX"

[node name="SFXFootstep" type="AudioStreamPlayer3D" parent="."]

[node name="SFXJump" type="AudioStreamPlayer3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.23173, 0)
visible = false
mesh = SubResource("CapsuleMesh_btcbx")

[node name="PickupHandler" type="Node3D" parent="." node_paths=PackedStringArray("hold_point", "camera")]
script = ExtResource("4_gwnis")
hold_point = NodePath("../Pivot/CameraPivot/CameraRig/HoldPoint")
camera = NodePath("../Pivot/CameraPivot/CameraRig/GameCamera")

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="TextureRect" type="TextureRect" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_k53q1")

[node name="PostProcessing" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="PostProcessing"]
material = SubResource("ShaderMaterial_apopc")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DebugHUD" parent="." groups=["player"] instance=ExtResource("9_x3vf3")]
layer = 2

[node name="TextboxUI" parent="." instance=ExtResource("10_apopc")]

[node name="BebePivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.998435, -0.055926, 0, 0.055926, 0.998435, 0, 0, 0)

[node name="BebeBear" parent="BebePivot" instance=ExtResource("11_apopc")]
transform = Transform3D(-1, 0, 8.74228e-08, 4.22486e-09, 0.998832, 0.0483268, -8.73207e-08, 0.0483268, -0.998832, 0, -0.651713, 0.0605456)

[node name="AnimationTree" parent="BebePivot/BebeBear" index="0"]
parameters/MoveBlend/blend_position = 0

[node name="Skeleton3D" parent="BebePivot/BebeBear/char_grp/rig" index="0"]
bones/2/position = Vector3(0, 0.041058, 0.277744)
bones/8/rotation = Quaternion(0.0071833, -0.000894426, -0.0686601, 0.997614)
bones/9/rotation = Quaternion(-1.36434e-07, 6.57504e-09, 0.531045, 0.847344)
bones/14/position = Vector3(-0.00595045, 0.153196, 0.00254864)
bones/24/rotation = Quaternion(0.0071833, -0.00089443, -0.0686601, 0.997614)
bones/26/rotation = Quaternion(-0.0767175, 0.131939, -0.0102425, 0.988232)
bones/26/scale = Vector3(0.336822, 8.81455, 0.336822)
bones/27/rotation = Quaternion(-1.51864e-07, -6.76749e-09, 0.531045, 0.847344)
bones/28/rotation = Quaternion(0.00724482, -1.25652e-07, -0.0686534, 0.997614)
bones/29/rotation = Quaternion(0.00718327, -0.000894399, -0.0686601, 0.997614)
bones/30/rotation = Quaternion(-1.04991e-07, -2.74763e-08, 0.531045, 0.847344)
bones/33/rotation = Quaternion(0.00718343, 0.000894233, 0.06866, 0.997614)
bones/34/rotation = Quaternion(-3.34399e-08, 1.03735e-07, -0.531045, 0.847344)
bones/35/rotation = Quaternion(0.00718347, 0.000894295, 0.0686601, 0.997614)
bones/36/rotation = Quaternion(-6.32549e-08, 4.47793e-08, -0.531045, 0.847344)
bones/41/position = Vector3(0.00595045, 0.153196, 0.00254867)
bones/51/rotation = Quaternion(0.00718343, 0.000894233, 0.06866, 0.997614)
bones/53/rotation = Quaternion(-0.0767175, -0.131936, 0.0102425, 0.988232)
bones/53/scale = Vector3(0.336822, 8.81455, 0.336822)
bones/54/rotation = Quaternion(-3.18748e-08, 1.2915e-07, -0.531045, 0.847344)
bones/55/rotation = Quaternion(0.00724495, 8.761e-08, 0.0686533, 0.997614)
bones/64/rotation = Quaternion(-0.440099, -0.449135, 0.19274, 0.753287)
bones/65/rotation = Quaternion(-5.00686e-08, -8.00409e-08, 0.434365, 0.900737)
bones/67/rotation = Quaternion(-0.281263, -0.14333, 0.0126064, 0.948783)
bones/70/rotation = Quaternion(-0.440099, -0.449135, 0.19274, 0.753288)
bones/72/rotation = Quaternion(0.527109, 0.00810905, 0.849744, 0.00503024)
bones/72/scale = Vector3(0.313528, 10.1729, 0.313528)
bones/74/rotation = Quaternion(-0.310355, -0.363869, 0.00769922, 0.878191)
bones/75/rotation = Quaternion(-4.79705e-08, -5.9133e-08, 0.434364, 0.900737)
bones/76/rotation = Quaternion(-0.479993, -0.147211, 0.0210339, 0.864577)
bones/80/rotation = Quaternion(-0.440099, 0.449135, -0.19274, 0.753288)
bones/81/rotation = Quaternion(-3.36388e-09, -3.04633e-08, -0.434365, 0.900737)
bones/82/rotation = Quaternion(-0.440099, 0.449135, -0.19274, 0.753288)
bones/84/rotation = Quaternion(-0.52711, 0.00810884, 0.849744, -0.00503016)
bones/84/scale = Vector3(0.313529, 10.1729, 0.313528)
bones/86/rotation = Quaternion(-0.281263, 0.14333, -0.0126064, 0.948783)
bones/90/rotation = Quaternion(-0.310355, 0.363869, -0.00769911, 0.878191)
bones/91/rotation = Quaternion(-3.30727e-09, -1.56631e-08, -0.434365, 0.900737)
bones/92/rotation = Quaternion(-0.479993, 0.147211, -0.0210338, 0.864577)
bones/117/position = Vector3(2.00202e-16, -0.0298551, 0.643128)
bones/120/position = Vector3(-0.105745, 0.111821, 0.180832)
bones/120/rotation = Quaternion(-0.581609, -0.267345, 0.618786, 0.455369)
bones/121/rotation = Quaternion(-1.91716e-08, 0.00610172, -2.19062e-08, 0.999981)
bones/122/position = Vector3(0.105745, 0.111821, 0.180832)
bones/122/rotation = Quaternion(0.581609, -0.267345, 0.618787, -0.455369)
bones/123/rotation = Quaternion(-3.44443e-08, -0.00610179, -2.81429e-08, 0.999981)
bones/124/position = Vector3(-0.104075, 0.0760951, 0.229919)
bones/124/rotation = Quaternion(-0.350921, -0.535348, 0.282597, 0.71442)
bones/125/position = Vector3(0.104075, 0.0760951, 0.229919)
bones/125/rotation = Quaternion(-0.350921, 0.535348, -0.282597, 0.714421)
bones/126/position = Vector3(-0.247288, -0.0242046, 0.446116)
bones/126/rotation = Quaternion(-0.615148, -0.127226, 0.529244, 0.570356)
bones/127/position = Vector3(0.247288, -0.0242046, 0.446116)
bones/127/rotation = Quaternion(-0.615149, 0.127226, -0.529244, 0.570356)
bones/128/position = Vector3(-0.267325, -0.0380516, 0.407783)
bones/128/rotation = Quaternion(-0.498877, -0.381743, 0.229046, 0.743593)
bones/129/rotation = Quaternion(7.04086e-08, -0.239822, 2.80809e-08, 0.970817)
bones/130/position = Vector3(0.267325, -0.0380516, 0.407783)
bones/130/rotation = Quaternion(-0.498825, 0.381796, -0.228967, 0.743626)
bones/131/rotation = Quaternion(-6.66848e-08, 0.23927, 7.50398e-08, 0.970953)
bones/132/position = Vector3(-0.267325, -0.0380516, 0.407783)
bones/132/rotation = Quaternion(-0.498824, -0.381796, 0.228967, 0.743626)
bones/133/rotation = Quaternion(0.120743, -0.218219, 0.150876, 0.956576)
bones/135/position = Vector3(0.267325, -0.0380516, 0.407783)
bones/135/rotation = Quaternion(-0.498825, 0.381796, -0.228967, 0.743626)
bones/136/rotation = Quaternion(0.120743, 0.218219, -0.150876, 0.956576)
bones/142/position = Vector3(0.311872, 0.442541, -0.113514)
bones/143/position = Vector3(-0.311872, 0.442541, -0.113514)

[node name="Bebe" parent="BebePivot/BebeBear/char_grp/rig/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.080261, 0)

[node name="LookAtHead" parent="BebePivot/BebeBear/char_grp/rig/Skeleton3D" index="1"]
target_node = NodePath("../../../../../../Pivot/CameraPivot/CameraRig/LookAtPoint")

[editable path="BebePivot/BebeBear"]
